po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-24 14:42+0000\n"
+"PO-Revision-Date: 2017-02-27 16:01+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -3014,7 +3014,7 @@ msgid ""
 "Price sets allow you to configure more complex contribution options (e.g. "
 "\"Contribute $25 more to receive our monthly magazine.\"). Click <a "
 "href='%1'>here</a> if you want to configure price sets for your site."
-msgstr ""
+msgstr "Nijedan Set cena donacija nije konfigurisan/omogućen za vaš sajt. Setovi cena vam omogućuju da podesite složenije zopcije za doniranje (npr. \"Donirajte još 25$ da biste dobijali naš mesečni magazin\"). Kliknite <a href='%1'>ovde</a> ukoliko želite da konfigurišete setove cena za vaš sajt."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -3112,7 +3112,7 @@ msgid ""
 "newsletter or volunteering). You might also want to collect information "
 "specific to this contribution (e.g. target one or several projects or funds "
 "to support with this contribution)."
-msgstr ""
+msgstr "Ukoliko želite da prikupite dodatne informacije od donatora, možete uključiti jedan ili dva CiviCRM profila - koji predstavljaju zbir standardnih ili sopstvenih polja - u ovu stranicu za donaciju. Na primer, možda će vam trebati informacije o osobi (npr. ime i adresa, ukoliko ih već ne zahteva vaš procesor uplate, interesovanje za volontiranje ili primanje biltena). Možda ćete želeti i da prikupite informacije specifične za ovu donaciju (npr. da odaberu jedan ili nekoliko projekata koje će podržati ovom donacijom)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid ""
@@ -3151,7 +3151,7 @@ msgstr ""
 msgid ""
 "Save your profile to return to this screen. You can preview it from here by "
 "clicking the Preview (microsope) button."
-msgstr ""
+msgstr "Sačuvajte vaš profil da biste se vratili na ovaj ekran. Možete ga pogledati odavde klikom na dugme Pogledaj (mikroskop)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.tpl
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
@@ -3161,7 +3161,7 @@ msgid ""
 "volunteer availability and skills. Add any number of fields to your "
 "contribution form by selecting CiviCRM Profiles (collections of fields) to "
 "include at the beginning of the page, and/or at the bottom."
-msgstr ""
+msgstr "Možda želite da prikupite od donatora više informacija nego što je potrebno za doniranje. Na primer, možda želite da znate njegove veštine i mogućnost volontiranja. Dodajte u formula za donaciju onoliko polja koliko želite tako što ćete odabrati CiviCRM profile (skupove polja) koje ćete uključiti na početku i na dnu stranice."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.tpl
 msgid ""
@@ -3181,7 +3181,7 @@ msgid ""
 "contribution records. If you do want to completely delete this contribution "
 "page, you first need to search for and delete all of the contribution "
 "transactions associated with this page in CiviContribute."
-msgstr ""
+msgstr "Ne možete obrisati ovu stranicu za donacije jer je već upotrebljena za slanje donacije ili plaćanje članstva. Preporučujemo da stranicu deaktivirate umesto da je obrišete, kako biste sačuvali integritet svojih podataka. Ukoliko želite da u potpunosti obrišete ovu stranicu, prvo morate da pronađete i obrišete sve donatorske transakcije povezane sa ovom stranicom u CiviContribute."
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 msgid ""
@@ -3284,7 +3284,7 @@ msgid ""
 " be used when recording the membership payment. The financial type selected "
 "here will only be used if you are also collecting additional contributions "
 "(as configured on the Membership Settings page)."
-msgstr ""
+msgstr "Beleška: Ukoliko koristite ovu stranicu za donacije za prijave i obnove članstva, finansijski tip konfigurisan u podešavanjima tipova članstva će se koristiti prilikom beleženja uplate za članstvo. Finansijski tip koji je odabran ovde će se koristiti samo ako prikupljate dodatne donacije (kao što je podešeno na stranici Podešavanja članstva)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Intro Content"
@@ -3295,7 +3295,7 @@ msgid ""
 "Enter content for the introductory message. This will be displayed below the"
 " page title. You can include images, as long as they are already uploaded to"
 " a server - click the \"Image\" button in the button bar."
-msgstr ""
+msgstr "Unesite sadržaj za uvodnu poruku. Ova poruka će se pojaviti ispod naslova stranice. Možete dodati i slike ukoliko su već postavljene na server - kliknite na dugme \"Slika\" u traci sa tasterima."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Footer Content"
@@ -3360,14 +3360,14 @@ msgid ""
 "Organization\" profile, or any other profile with type 'Contact' and/or "
 "'Organization' (<a href=\"%1\">Administer > Customize Data and Screens > "
 "Profiles</a>). The profile must include Organization Name and Email Address."
-msgstr ""
+msgstr "Podatke o organizaciji koji su prikupljeni od korisnika kontroliše odabrani profil organizacije. Možete koristiti podrazumevani profil \"U ime organizacije\", ili bilo koji drugi profil čiji je tip 'Kontakt' i/ili 'Organizacija' (<a href=\"%1\">Administracija > Sopstvena podešavanja podataka i ekrana > Profili</a>). Profil mora sadržati ime organizacije i email adresu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
 "When enabled, links allowing people to share this online contribution page "
 "with their social network will be displayed (e.g. Facebook \"Like\", "
 "Google+, and Twitter)."
-msgstr ""
+msgstr "Ukolike je ova opcija uključena, biće prikazani linkovi koji omogućavaju deljenje ove stranice za online donacije na društvenim mrežama (npr Facebook \"lajk\", Google+ i Twitter)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3424,11 +3424,11 @@ msgid ""
 "To change the organization data collected use the \"On Behalf Of "
 "Organization\" profile (<a href=\"%1\">Administer > Customize Data and "
 "Screens > Profiles</a>)."
-msgstr ""
+msgstr "Upotrebite profil \"U ime organizacije\" da biste izmenili već prikupljene podatke o organizaciji (<a href=\"%1\">Administracija > Sopstvena podešavanja podataka i ekrana > Profili</a>)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid "Text displayed next to the checkbox on the contribution form."
-msgstr ""
+msgstr "Tekst koji će biti prikazan pored kućice na formularu za donaciju."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.tpl
 msgid ""
@@ -3576,7 +3576,7 @@ msgstr ""
 msgid ""
 "This title will be displayed at the top of the thank-you / transaction "
 "confirmation page."
-msgstr ""
+msgstr "Ovaj naslov će se prikazivati na vrhu stranice sa zahvalnicom/potvrdom stransakcije."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3593,7 +3593,7 @@ msgid ""
 "Enter link(s) and/or text that you want to appear at the bottom of the "
 "thank-you page. You can use this content area to encourage contributors to "
 "visit a tell-a-friend page or take some other action."
-msgstr ""
+msgstr "Unesite link(ove) i/ili tekst koji želite da bude prikazan na dnu stranice sa zahvalnicom. Ovaj prostor za sadržaj možete iskoristiti da podstaknete donatore da posete stranicu Recite-prijatelju ili učine nešto drugo."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3609,7 +3609,7 @@ msgstr "Automatsko slanje priznanica"
 msgid ""
 "Check this box if you want an electronic receipt to be sent automatically to"
 " the contributor's email address."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko želite da na email adresu donatora automatski bude poslat email sa elektronskom potvrdom."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
@@ -3649,25 +3649,25 @@ msgstr ""
 msgid ""
 "IMPORTANT: Keep in mind that this message will be included in ALL of the "
 "following types of receipts related to this online contribution page"
-msgstr ""
+msgstr "VAŽNO: Imajte na umu da će se ova poruka nalaziti na SVIM sledećim tipovima potvrda u vezi sa ovom stranicom za online donacije."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "One-time online contributions"
-msgstr ""
+msgstr "Jednokratne online donacije"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Recurring online contributions (if enabled for this page)"
-msgstr ""
+msgstr "Periodične online donacije (ako su omogućene za ovu stranicu)"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Automatically renewing membership payments (if enabled for this page)"
-msgstr ""
+msgstr "Uplate za automatsko obnavljanje članstva (ako su omogućene za ovu stranicu)"
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
 "NOTE: The text entered here will be used for both TEXT and HTML versions of "
 "receipt emails so we do not recommend including HTML tags / formatting here."
-msgstr ""
+msgstr "Beleška: Tekst koji unesete ovde biće upotrebljen i za TEXT, kao i za HTML verziju emaila sa potvrdom, tako da ne preporučujemo da ovde uključite HTML tagove / formatiranje."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "CC Receipts"
@@ -3848,7 +3848,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Billing Address"
-msgstr ""
+msgstr "Adresa za naplatu"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Are you sure you want to delete this premium?"
@@ -3887,7 +3887,7 @@ msgid ""
 "version will be automatically created for you. If you don't have an image "
 "available at this time, you may also choose to display a 'No Image "
 "Available' icon - by selecting the 'default image'."
-msgstr ""
+msgstr "Možete postaviti sliku sa svoh kompjutera ili uneti URL slike koji već postoji na vebu. Ukoliko izaberete da postavite fajl sa slikom, biće automatski kreirana njena  'thumbnail' verzija. Ukoliko trenutno nemate sliku, možete izabrati da se prikazuje ikonica 'Slika nije dostupna' - tako što ćete odabrati 'podrazumevanu sliku'."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
@@ -3899,7 +3899,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "(Contribute at least X to be eligible for this gift.)"
-msgstr ""
+msgstr "(Donirajte najmanje X da biste se kvalifikovali za ovaj poklon)"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
@@ -3931,7 +3931,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Subscription or Service Settings"
-msgstr ""
+msgstr "Podešavanja pretplate ili usluge"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
@@ -3950,13 +3950,13 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Duration of subscription or service (e.g. 12-month subscription)."
-msgstr ""
+msgstr "Trajanje pretplate ili usluge (npr. 12-mesečna pretplata)."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
 "Frequency of subscription or service (e.g. journal delivered every two "
 "months)."
-msgstr ""
+msgstr "Učestalnost pretplate ili usluge (npr. dostava časopisa na svaka dva meseca)."
 
 #: templates/CRM/Contribute/Form/PCP/Campaign.tpl
 msgid ""
@@ -4015,7 +4015,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Search/EmptyResults.tpl
 msgid "if you are searching by contributor name, check your spelling"
-msgstr ""
+msgstr "Ukoliko pretražujete po imenu donatora, proverite kako ste ispisali ime"
 
 #: templates/CRM/Contribute/Form/SearchContribution.tpl
 msgid "Find Contribution Pages"
@@ -4023,7 +4023,7 @@ msgstr "Nađi stranice donacije"
 
 #: templates/CRM/Contribute/Form/SearchContribution.tpl
 msgid "Complete OR partial Contribution Page title."
-msgstr ""
+msgstr "Kompletno ILI delimično ime stranice za donaciju."
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
@@ -4051,7 +4051,7 @@ msgid ""
 "Are you sure you want to delete the selected contributions? This delete "
 "operation cannot be undone and will delete all transactions and activity "
 "associated with these contributions."
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete označene donacije? Ova operacija je nepovratna i ukloniće sve transakcije i aktivnosti povezane sa ovim donacijama."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.tpl
 msgid ""
@@ -4155,7 +4155,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Contact Records for Contributors"
-msgstr ""
+msgstr "Zapisi o kontaktima za donatore"
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4170,7 +4170,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Matching Contributions to Contributors"
-msgstr ""
+msgstr "Poklapanje donacija sa donatorima"
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4243,14 +4243,14 @@ msgstr ""
 msgid ""
 "Select 'Individual' if you are importing contributions made by individual "
 "persons."
-msgstr ""
+msgstr "Odaberite 'Pojedinac' ukoliko importujete podatke o donacijama pojedinaca."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.tpl
 msgid ""
 "Select 'Organization' or 'Household' if you are importing contributions made"
 " by contacts of that type. (NOTE: Some built-in contact types may not be "
 "enabled for your site.)"
-msgstr ""
+msgstr "Odaberite 'Organizacija' ili 'Domaćinstvo' ukoliko importujete donacije kontakata ovog tipa. (Beleška: Neki od ugrađenih tipova kontakata možda nisu aktivirani za vaš sajt.)"
 
 #: templates/CRM/Contribute/Import/Form/DataSource.tpl
 msgid ""
@@ -4277,7 +4277,7 @@ msgstr[2] ""
 msgid ""
 "You can <a href='%1'>Download Mismatched Contributions</a>. You may then "
 "correct them, and import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href=\"%1\">Preuzeti zapise donacija koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
@@ -4299,15 +4299,15 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected %count records which are duplicates of existing CiviCRM"
 " contribution records."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je prepoznao %count zapis koji je duplikat već postojećih CiviCRM zapisa o donacijama."
+msgstr[1] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o donacijama."
+msgstr[2] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o donacijama."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
 "Rows with invalid data in one or more fields. These rows have been skipped "
 "(not imported)."
-msgstr ""
+msgstr "Postoje redovi sa nevažećim podacima u jednom ili više polja. Ovi redovi će biti preskočeni (neće biti importovani)."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Rows where a soft credit was successfully assigned to a contact."
@@ -4345,7 +4345,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Rows with mismatched contribution IDs... (NOT updated)."
-msgstr ""
+msgstr "Redovi sa konfliktnim ID brojevima donacija... (NISU ažurirani)."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Download Mismatched Contributions"
