--- a/po/uk_UA/common-components.po
+++ b/po/uk_UA/common-components.po
@@ -8,12 +8,13 @@
 # Sergiy <shemet.s@ua.fm>, 2015
 # Tetyana Bilyavska <tbilyavska@ndi.org>, 2013
 # Yevhen Barshchevskyi <ybarshchevskyi@ndi.org>, 2013
+# Євген Шульга <yevhen.shulha@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-27 13:32+0000\n"
+"Last-Translator: Євген Шульга <yevhen.shulha@gmail.com>\n"
 "Language-Team: Ukrainian (http://www.transifex.com/civicrm/civicrm/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -287,7 +288,7 @@ msgstr "Опції"
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl CRM/Pledge/Info.php
 #: CRM/Pledge/Page/DashBoard.php
 msgid "CiviPledge"
-msgstr "CiviЗастава"
+msgstr "CiviЗобов'язання"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl CRM/Grant/Info.php
 msgid "CiviGrant"
@@ -2179,7 +2180,7 @@ msgstr "Дата початку фінансового внеску"
 #: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
 #: CRM/Report/Form/Pledge/Pbnp.php
 msgid "Pledge Made"
-msgstr "Зроблена застава"
+msgstr "Взято зобов'язання"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 #: CRM/Report/Form/Pledge/Summary.php
