po: update po/sr_RS@latin/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-24 15:48+0000\n"
+"PO-Revision-Date: 2017-02-27 15:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -643,7 +643,7 @@ msgstr ""
 msgid ""
 "If set, new contacts that are created when signing a petition are assigned a"
 " tag of this name."
-msgstr ""
+msgstr "Ukoliko je podešen, novi kontakti kreirani prilikop potpisivanja peticije dobijaju tag sa ovim imenom."
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Petition Signers Group"
@@ -654,7 +654,7 @@ msgid ""
 "All contacts that have signed a CiviCampaign petition will be added to this "
 "group. The group will be created if it does not exist (it is required for "
 "email verification)."
-msgstr ""
+msgstr "Svi kontakti koji su potpisali peticiju kroz CiviCampaign će biti dodati u ovu grupu. Grupa će biti kreirana ukoliko ne postoji (postojanje ove grupe je neophodno zbog email verifikacije)."
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "CiviContribute Component Settings"
@@ -750,7 +750,7 @@ msgstr "Format pojedinačnih imena za sortiranje"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Enable Popup Forms"
-msgstr ""
+msgstr "Uključi popup formulare"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Input Format"
@@ -880,7 +880,7 @@ msgstr "Hešovani mailing URL"
 msgid ""
 "We have automatically enabled the Mailings tab for the Contact Summary screens\n"
 "        so that you can view mailings sent to each contact."
-msgstr ""
+msgstr "Mailing tab je automatski uključen na ekranima sa kratkim pregledom kontakta\ntako da možete pogledati svaki mailing poslat svakom kontaktu."
 
 #: CRM/Admin/Form/Preferences/Member.php
 msgid "CiviMember Component Settings"
@@ -928,7 +928,7 @@ msgstr "Vaše izmene su sačuvane"
 #: CRM/Admin/Form/PreferencesDate.php
 #: templates/CRM/Admin/Page/PreferencesDate.tpl
 msgid "Start Offset"
-msgstr ""
+msgstr "Početni offset"
 
 #: CRM/Admin/Form/PreferencesDate.php
 msgid "Format"
@@ -1059,7 +1059,7 @@ msgstr ""
 msgid ""
 "If \"Also include\" or \"Limit to\" are selected, you must specify at least "
 "one %1"
-msgstr ""
+msgstr "Ukoliko je \"Uključi i\" ili \"Ograniči na\" uključeno, morate odrediti barem jedan %1"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Selected Reminder has been deleted."
@@ -1245,7 +1245,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Please define the custom translation function first."
-msgstr ""
+msgstr "Prvo definišite funkciju sopstvenog prevoda."
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid ""
@@ -1284,7 +1284,7 @@ msgstr "Veličina posla mora biti barem 1000 ili podešena na 0 (bez limita)."
 msgid ""
 "A job size smaller than the batch limit will negate the effect of the batch "
 "limit."
-msgstr ""
+msgstr "Veličina posla manjeg od limita grupe će poništiti efekte limita grupe."
 
 #: CRM/Admin/Form/Setting/Mapping.php
 msgid "Settings - Mapping and Geocoding Providers"
@@ -1554,11 +1554,11 @@ msgstr "Keš je očišćen i meni je uspešno ponovo izgrađen."
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Settings - Resource URLs"
-msgstr ""
+msgstr "Podešavanja - URLovi resursa"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "CiviCRM Resource URL"
-msgstr ""
+msgstr "URL CiviCRM resursa"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Image Upload URL"
@@ -1570,7 +1570,7 @@ msgstr "URL sopstvenog css-a"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Extension Resource URL"
-msgstr ""
+msgstr "URL resursa ekstenzija"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Force Secure URLs (SSL)"
@@ -1594,7 +1594,7 @@ msgstr "Tag set"
 msgid ""
 "This tag cannot be deleted. You must delete all its child tags ('%1', etc) "
 "prior to deleting this tag."
-msgstr ""
+msgstr "Ovaj tag ne može biti obrisan. Morate obrisati sve njemu podređene tagove ('%1', itd) pre nego što obrišete ovaj tag."
 
 #: CRM/Admin/Form/Tag.php
 msgid "You do not have sufficient permission to delete this reserved tag."
@@ -1729,13 +1729,13 @@ msgstr "Da li ste sigurni da želite da isključite ovu komponentu?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this custom data field?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovo sopstveno polje sa podacima?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
 "Are you sure you want to disable this custom data group? Any profile fields "
 "that are linked to custom fields of this group will be disabled."
-msgstr ""
+msgstr "Da li ste sigurni da želite da isključite ovu grupu korisničkih podataka? Sva profilna polja koja su povezana sa korisničkim poljima u ovoj grupi će biti isključena."
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this message tempate?"
@@ -2231,7 +2231,7 @@ msgstr "Firewall i Proxy"
 msgid ""
 "Connections provide a simplified way to link your CiviCRM installation to an"
 " external service."
-msgstr ""
+msgstr "Veze vam omogućavaju pojednostavljen način povezivanja vaše CiviCRM instalacije sa eksternim servisima."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
@@ -2387,7 +2387,7 @@ msgstr "Sinhronizacija korisnika sa kontaktima:"
 msgid ""
 "CiviCRM will check each user record for a contact record. A new contact "
 "record will be created for each user where one does not already exist."
-msgstr ""
+msgstr "CiviCRM će proveriti svaki zapis o korisniku za zapis o kontaktu. Novi zapis kontakta će biti napravljen za svakog korisnika koji već nema svoj kontakt."
 
 #: templates/CRM/Admin/Form/ContactType.tpl
 #: templates/CRM/Admin/Page/ContactType.tpl
@@ -2434,7 +2434,7 @@ msgid ""
 "Downloading this extension will provide you with new functionality. Please "
 "make sure that the extension you're installing or upgrading comes from a "
 "trusted source."
-msgstr ""
+msgstr "Preuzimanjem ove ekstenzije dobićete dodatnu funkcionalnost. Proverite da ekstenzija koju instalirate ili ažurirate dolazi iz pouzdanog izvora."
 
 #: templates/CRM/Admin/Form/Job.tpl
 msgid "New Scheduled Job"
@@ -2458,7 +2458,7 @@ msgstr "API zahtev:"
 msgid ""
 "Put in the API method name. You need to enter pieces of full API function "
 "name as described in the documentation."
-msgstr ""
+msgstr "Unesite ime API metoda. Moraćete da unesete sve delove API funkcije kako je opisano u dokumentaciji."
 
 #: templates/CRM/Admin/Form/LabelFormats.tpl
 msgid ""
@@ -2522,7 +2522,7 @@ msgstr "Šifra koja se koristi za slanje zahteva (IMAP i POP3 polling)."
 msgid ""
 "Optional local part (e.g., 'civimail+' for addresses like "
 "civimail+s.1.2@example.com)."
-msgstr ""
+msgstr "Neobavezni lokalni deo (npr. 'civimail+' za adrese kao što je civimail+s.1.2@example.com)."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Email address domain (the part after @)."
@@ -2721,7 +2721,7 @@ msgid ""
 "Changing the Value field will unlink records which have been marked with "
 "this option. This change can not be undone except by restoring the previous "
 "value."
-msgstr ""
+msgstr "Menjanjem vrednosti ovog polja će prekinuti vezu sa zapisima koji su označeni ovom opcijom. Ova izmena je nepovratna, osim u slučaju vraćanja na prethodnu vrednost."
 
 #: templates/CRM/Admin/Form/Options.tpl
 msgid "Search Title"
@@ -2795,7 +2795,7 @@ msgstr "Da li osoba koja ima ovaj status treba da se računa kao učesnik za pot
 msgid ""
 "If you allow users to select a Participant Status by including that field on"
 " a profile - only statuses with 'Public' visibility are listed."
-msgstr ""
+msgstr "Ukoliko dozvolite korisnicima da biraju status učesnika tako što ćete uključiti to polje u profilu - samo statusi sa vidljivošću podešenom na 'Javno' će biti izlistani."
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 #: templates/CRM/Admin/Page/PaymentProcessorType.tpl
@@ -3066,7 +3066,7 @@ msgid ""
 "automatically (as you type). However, this plugin is not enabled by default "
 "since it sends user input to a 3rd party service (spellchecker.net) without "
 "informing the user - and this may pose privacy issues for some sites."
-msgstr ""
+msgstr "<strong>Provera pravopisa:</strong> ckEditor ima i podrazumevano dugme za proveru pravopisa. Takođe postoji i opcioni plugin koji automatski proverava pravopis (dok vi kucate). Ovaj plugin nije uključen zato što šalje korisnike na eksterni (3rd party) servis spellchecker.net bez prethodnog informisanja korisnika - a ovo stvara probleme vezane za privatnost na nekim sajtovima."
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -3078,7 +3078,7 @@ msgstr "Da biste uključili automatski spell check, u packages/ckeditor/config.j
 msgid ""
 "To remove the Spell Check button, in packages/ckeditor/config.js - remove "
 "this item in the config.toolbar_Full list:"
-msgstr ""
+msgstr "Da biste isključili dugme za proveru pravopisa, u packages/ckeditor/config.js - obrišite ovu komandu iz config.toolbar_Full list:"
 
 #: templates/CRM/Admin/Form/Preferences/Display.hlp
 msgid ""
@@ -3293,7 +3293,7 @@ msgstr ""
 msgid ""
 "CiviCRM includes several optional components which give you more tools to "
 "connect with and engage your constituents."
-msgstr ""
+msgstr "CiviCRM sadrži nekoliko neobaveznih komponenti koje vam daju više mogućnosti da se povežete sa onima koji vas podržavaju."
 
 #: templates/CRM/Admin/Form/Setting/Component.tpl
 msgid ""
@@ -3575,7 +3575,7 @@ msgstr "Format za prikaz monetarnih vrednosti."
 msgid ""
 "Function name to use for translation inplace of the default CiviCRM "
 "translate function. "
-msgstr ""
+msgstr "Ime funkcije koja će se koristiti za prevod umesto podrazumevane CiviCRM funkcije za prevod."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid ""
@@ -3592,7 +3592,7 @@ msgstr "Gobalni CSV razdelnik karakter. Izmenite ovo podešavanje da uključite 
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Contact Address Fields - Selection Values"
-msgstr ""
+msgstr "Polja za adresu kontakta - izbor vrednosti"
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "This value is selected by default when adding a new contact address."
@@ -3652,7 +3652,7 @@ msgstr "Da bi se koristila ova funkcionalnost, kosinik baza podataka ove instala
 msgid ""
 "(Multilingual support currenly cannot be enabled on installations with "
 "enabled logging.)"
-msgstr ""
+msgstr "(Multijezička podrška trenutno ne može biti uključena na instalacijama sa aktiviranim logovanjem.)"
 
 #: templates/CRM/Admin/Form/Setting/Mail.tpl
 msgid ""
@@ -3745,7 +3745,7 @@ msgid ""
 "there is no geo-coding plugin for your selected mapping provider. You can "
 "leave the Geocoding fields blank if you are using Google as your mapping "
 "provider."
-msgstr ""
+msgstr "Možete odabrati drugi servis za geokoding. Ovo je neophodno ukoliko ne postoji geo-koding plugin za vašeg maping provajdera. Možete ostaviti prazna polja za geokoding ukoliko koristite Google kao vaš maping provajder."
 
 #: templates/CRM/Admin/Form/Setting/Mapping.tpl
 msgid ""
@@ -3889,7 +3889,7 @@ msgid ""
 "Path where documents and images which are attachments to contact records are"
 " stored (e.g. contact photos, resumes, contracts, etc.). These attachments "
 "are defined using 'file' type custom fields."
-msgstr ""
+msgstr "Putanja gde se dokumenti i slike koji se nalaze u prilogu zapisa o kontaktima čuvaju (npr. fotografije kontakata, CV, ugovori, itd.) Ovi prilozi se definišu koristeći korisnička polja tipa 'fajl'."
 
 #: templates/CRM/Admin/Form/Setting/Path.tpl
 msgid ""
@@ -4262,7 +4262,7 @@ msgstr "Notifikacije će se ponovo pojavljivati po izlasku nove verzije."
 msgid ""
 "You can change the types of records which this tag can be used for by "
 "editing the 'Parent' tag."
-msgstr ""
+msgstr "Možete promeniti tipove zapisa za koje ovaj tag može da se koristi tako što ćete promeniti 'Nadređeni' tag."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "What types of record(s) can this tag be used for?"
@@ -4273,7 +4273,7 @@ msgid ""
 "Reserved tags can not be deleted. Users with 'administer reserved tags' "
 "permission can set or unset the reserved flag. You must uncheck 'Reserved' "
 "(and delete any child tags) before you can delete a tag."
-msgstr ""
+msgstr "Rezervisani tagovi se ne mogu obrisati. Korisnici sa dozvolom 'Administracija rezervisanih tagova' mogu da podese ili promene rezervisano markiranje. Morate odštiklirati 'Rezervisano' (i obrisati bilo koje podređene tagove) pre brisanja taga."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Defines if you can select this tag."
@@ -4341,13 +4341,13 @@ msgstr "Ime parametra"
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid "Choose a parameter from the list, or select \"other\" for manual entry."
-msgstr ""
+msgstr "Izaberite parametar iz liste, ili izaberite \"drugo\" za sopstveni unos."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
 "The default operator is equals (=), and is the only operator supported for "
 "\"create\" or \"delete\" actions."
-msgstr ""
+msgstr "Podrazumevani operater je znak jednakosti (=), i to je jedini operater koji podržava aktivnosti \"kreiraj\" i \"briši\"."
 
 #: templates/CRM/Admin/Page/APIExplorer.hlp
 msgid ""
@@ -4394,7 +4394,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Leave blank for default"
-msgstr ""
+msgstr "Ostavite prazno za podrazumevanu vrednost"
 
 #: templates/CRM/Admin/Page/APIExplorer.js
 msgid "Group by"
@@ -4700,7 +4700,7 @@ msgstr "Podešavanja adrese"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Format addresses in mailing labels, input forms and screen display."
-msgstr ""
+msgstr "Format adresa u oznakama za mailing, formularima za unos i prikazu na ekranima."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Setting.tpl
@@ -4712,7 +4712,7 @@ msgstr "Mapiranje i Geokoding"
 msgid ""
 "Configure a mapping provider (e.g. Google or Yahoo) to display maps for "
 "contact addresses and event locations."
-msgstr ""
+msgstr "Konfiguracija provajdera za mapiranje (npr. Google ili Yahoo) za prikaz mapa adresa kontakata i lokacija događaja."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
@@ -4723,7 +4723,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Version reporting and alerts, reCAPTCHA configuration and attachments."
-msgstr ""
+msgstr "Izveštaji i upozorenja vezana za verziju, reCAPTCHA konfiguracija i prilozi."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/ContactType.hlp
@@ -5212,7 +5212,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid "System Workflow Message Templates"
-msgstr ""
+msgstr "Šabloni poruka za sistemski tok rada"
 
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
 msgid ""
