--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -9,7 +9,7 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
-# francescbassas <francesc@babu.cat>, 2014-2016
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2016
 # ixiam <info@ixiam.com>, 2013,2016-2017
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2012
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 11:53+0000\n"
+"PO-Revision-Date: 2017-02-28 17:55+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -2071,15 +2071,15 @@ msgstr "Guardar una copia..."
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "(Copy) "
-msgstr ""
+msgstr "(Copiar)"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Print to PDF"
-msgstr ""
+msgstr "Imprimir PDF"
 
 #: CRM/Report/BAO/ReportInstance.php
 msgid "Export as CSV"
-msgstr ""
+msgstr "Exportar como CSV"
 
 #: CRM/Report/BAO/ReportInstance.php CRM/Report/Page/InstanceList.php
 msgid "Delete report"
