--- a/po/es_ES/member.po
+++ b/po/es_ES/member.po
@@ -6,7 +6,7 @@
 # Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # Carlos Capote <carloscapote@masticable.org>, 2014
 # Eduardo Riesco <eduardo.riesco@gmail.com>, 2011
-# francescbassas <francesc@babu.cat>, 2015-2016
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2015-2016
 # ixiam <info@ixiam.com>, 2013,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
@@ -14,6 +14,7 @@
 # Jon Altuna <jonaltuna@msn.com>, 2015
 # Maria Dolores Vallenilla <mvallenilla@ndi.org>, 2015
 # Marti Prat <m.prat@ixiam.com>, 2014
+# Monica Tapia A <monicatapia@rutacivica.org>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-14 11:21+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2017-02-28 18:02+0000\n"
+"Last-Translator: Monica Tapia A <monicatapia@rutacivica.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2303,19 +2304,19 @@ msgstr "Esta membresía será renovada automáticamente. Usted puede cancelar la
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and In Progress"
-msgstr ""
+msgstr "Su membresía está en proceso de ser renovada automáticamente"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Failed"
-msgstr ""
+msgstr "La renovación automática de su membresía falló"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Cancelled"
-msgstr ""
+msgstr "La renovación autómatica de su membresía se canceló"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Ended"
-msgstr ""
+msgstr "La renovación automática de su membresía terminó"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
@@ -2327,15 +2328,15 @@ msgstr "El estado del miembro NO está sobreescrito"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew Subscription Status?"
-msgstr ""
+msgstr "¿El estatus de su suscripción renovada automáticamente?"
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
-msgstr ""
+msgstr "Ninguno"
 
 #: CRM/Member/BAO/Query.php
 msgid "Ended"
-msgstr ""
+msgstr "Terminado"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden?"
@@ -2426,13 +2427,13 @@ msgstr "Exportar miembros"
 
 #: CRM/Member/Task.php
 msgid "Print/merge document for memberships"
-msgstr ""
+msgstr "Imprimir y personalizar los documentos de membresía"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "Automatically email a membership confirmation and receipt to %1? OR if the "
 "payment is from a different contact, this email will only go to them."
-msgstr ""
+msgstr "Enviar automáticamente un correo para confirmar la membresía y el recibo del 1%? O si el pago es de un contacto diferente, este correo sólo irá a ellos"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -2462,7 +2463,7 @@ msgstr "Seleccione ninguno para mostrar todas las membresías"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Auto-Renew Subscription Status"
-msgstr ""
+msgstr "Estatus de suscripción renovada automáticamente"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
