--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -10,13 +10,14 @@
 # cero <videoalertas@gmail.com>, 2011
 # dario hereñu <magallania@gmail.com>, 2016
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2014,2016
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014,2016
 # Gorehide Tresde <gorehide@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013-2014,2016-2017
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2011
 # Jon Altuna <jonaltuna@msn.com>, 2015
 # Marti Prat <m.prat@ixiam.com>, 2014,2016
+# Monica Tapia A <monicatapia@rutacivica.org>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Romain Thouvenin <romain.thouvenin@gmail.com>, 2016
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-08 11:43+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2017-02-28 17:47+0000\n"
+"Last-Translator: Monica Tapia A <monicatapia@rutacivica.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4995,7 +4996,7 @@ msgstr "Contribución recurrente"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "All recurring contributions"
-msgstr ""
+msgstr "Todas las aportaciones recurrentes"
 
 #: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
@@ -5008,12 +5009,12 @@ msgstr "Todas las contribuciones periódicas independientemente de sus pagos"
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Revenue Recognition Date"
-msgstr ""
+msgstr "Fecha de ingreso reconocido"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Adjust Recurring Start Date"
-msgstr ""
+msgstr "Ajustar la fecha de inicio de la aportacion recurrente"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Contribution Product ID"
@@ -5093,19 +5094,19 @@ msgstr "Color del enlace de la página de inicio"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "-select product-"
-msgstr ""
+msgstr "Seleccione el producto"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period to Close"
-msgstr ""
+msgstr "Periodo de cierre de contabilidad"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Are you sure you want to close accounting period?"
-msgstr ""
+msgstr "¿Está seguro que quiere cerrar el periodo de contabilidad?"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period has been closed successfully!"
-msgstr ""
+msgstr "Periodo de contabilidad se ha cerrado exitosamente"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
@@ -5117,7 +5118,7 @@ msgstr "Contribución en línea:"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Returning since contribution has already been handled."
-msgstr ""
+msgstr "Returning porque la aportación ya se hizo"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -5127,7 +5128,7 @@ msgstr "Esta página no tiene configurado ningún campo precio o puede que no po
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Confirm Payment"
-msgstr ""
+msgstr "Confirmar pago"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
@@ -5144,7 +5145,7 @@ msgstr "ID de la transacción por un pago de reembolso"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Month and Year are required field for Revenue Recognition."
-msgstr ""
+msgstr "Mes y año son campos requeridos para el reconocimiento del ingreso"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
@@ -5165,19 +5166,19 @@ msgstr "Por favor, renueve mi membresía automáticamente."
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Specific Calendar Date"
-msgstr ""
+msgstr "Fecha del calendario específica"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Specific day of Month"
-msgstr ""
+msgstr "Día específico del mes"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Day of Contribution"
-msgstr ""
+msgstr "Dia de la aportación"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Recurring Contribution Start Date Default"
-msgstr ""
+msgstr "Fecha de inicio default de la aportación recurrente "
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow Edits to Recurring Donation Start date?"
@@ -5185,7 +5186,7 @@ msgstr "Permitir ediciones en la fecha de inicio de las donaciones recurrentes?"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "The recurring start date cannot be prior to the current date."
-msgstr ""
+msgstr "La fecha del cargo recurrente no puede ser previa a la fecha actual"
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
@@ -5281,7 +5282,7 @@ msgstr "Sin pagos encontrados para este %1 registro"
 msgid ""
 "Recurring payment will be processed this day of the month following "
 "submission of this contribution page."
-msgstr ""
+msgstr "El pago recurrente será procesado el día del mes aprobado en esta página de contribución"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.hlp
 msgid "Contributor Profiles"
@@ -5327,7 +5328,7 @@ msgstr "Nota: Si el método correcto de pago no está alistado aquí (por ejempl
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Pay Now"
-msgstr ""
+msgstr "Pagar ahora"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "INVOICE"
