--- a/po/es_ES/menu.po
+++ b/po/es_ES/menu.po
@@ -8,8 +8,8 @@
 # Fernando <badeaselche@hotmail.com>, 2012
 # Carlos Capote <carloscapote@masticable.org>, 2012-2013
 # Fernando <badeaselche@hotmail.com>, 2012
-# francescbassas <francesc@babu.cat>, 2014-2015
-# francescbassas <francesc@babu.cat>, 2014
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014-2015
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014
 # ixiam <info@ixiam.com>, 2013,2016
 # iWi development <iwidevelopment@gmail.com>, 2011-2012
 # ixiam <info@ixiam.com>, 2013
@@ -17,8 +17,9 @@
 # jvalero <juan@jvalero.org>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
 # kaotik <kaotiko@gmail.com>, 2011
-# Marcela Garcia-Casteblanco <marcegcol@hotmail.com>, 2015
+# Marcela Garcia-Casteblanco <inactive+marcegcol@transifex.com>, 2015
 # Marti Prat <m.prat@ixiam.com>, 2014
+# Monica Tapia A <monicatapia@rutacivica.org>, 2017
 # Fernando <badeaselche@hotmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # piuser8 YT <piuser9@gmail.com>, 2016
@@ -27,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-28 18:03+0000\n"
+"Last-Translator: Monica Tapia A <monicatapia@rutacivica.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2174,7 +2175,7 @@ msgstr "Formas de pago"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Close Accounting Period"
-msgstr ""
+msgstr "Cierre de periodo de contabilidad"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2183,7 +2184,7 @@ msgstr "Configurar CKEditor"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM Resources"
-msgstr ""
+msgstr "Recursos de CiviCRM"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2219,7 +2220,7 @@ msgstr "Extensiones"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Reports"
-msgstr ""
+msgstr "Mis reportes"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
