--- a/po/es_ES/mailing.po
+++ b/po/es_ES/mailing.po
@@ -10,8 +10,8 @@
 # carmyman <manuel.rubio.p@gmail.com>, 2012
 # Carolina Gomez <cgomez@ndi.org>, 2015
 # dario hereñu <magallania@gmail.com>, 2016
-# francescbassas <francesc@babu.cat>, 2014
-# francescbassas <francesc@babu.cat>, 2014
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014
+# Francesc Bassas i Bullich <francesc@babu.cat>, 2014
 # Gorehide Tresde <gorehide@gmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013,2016
 # iWi development <iwidevelopment@gmail.com>, 2011
@@ -21,6 +21,7 @@
 # carmyman <manuel.rubio.p@gmail.com>, 2012
 # Marti Prat <m.prat@ixiam.com>, 2014
 # Miriam Querol <m.querol@ixiam.com>, 2016
+# Monica Tapia A <monicatapia@rutacivica.org>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
 # sluc23 <sluc23@hotmail.com>, 2011
@@ -30,8 +31,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-02-28 18:05+0000\n"
+"Last-Translator: Monica Tapia A <monicatapia@rutacivica.org>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2534,7 +2535,7 @@ msgstr "Aperturas / clics"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "Document Body"
-msgstr ""
+msgstr "Texto del documento"
 
 #: CRM/Mailing/BAO/Query.php
 msgid "Campaign %1 %2"
@@ -2612,11 +2613,11 @@ msgstr "Url rastreable"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Please provide either HTML or TEXT format for the Body."
-msgstr ""
+msgstr "Por favor, elija formato de HTML o TEXTO para el texto del documento"
 
 #: CRM/Mailing/Selector/Browse.php
 msgid "Public View"
-msgstr ""
+msgstr "Vista pública"
 
 #: CRM/Mailing/Selector/Event.php
 msgid "Total Tracked Opens"
@@ -2650,4 +2651,4 @@ msgstr "NOTA: Cuando esta función está habilitada, todos los enlaces en el cue
 
 #: templates/CRM/Mailing/Page/Report.tpl
 msgid "Public url"
-msgstr ""
+msgstr "url pública"
