po: update po/sr_RS@latin/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-18 11:14+0000\n"
+"PO-Revision-Date: 2017-02-28 15:37+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -152,7 +152,7 @@ msgstr "Ne možete snimiti dve uplate za istu obavezu u jednoj grupi."
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Total for amounts entered below does not match the expected batch total."
-msgstr ""
+msgstr "Ukupna vrednost svih iznosa unešena ispod se ne slaže sa očekivanom ukupnom vrednošću u grupi."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Processed."
