po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-23 15:41+0000\n"
+"PO-Revision-Date: 2017-02-28 09:53+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1272,7 +1272,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer > "
 "Customize Data and Screens > Profiles to configure a Profile. Consult the "
 "online Administrator documentation for more information."
-msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Serijsko ažuriranje preko profila. Idite na Administracija > Sopstvena podešavanja podataka i ekrana > Prolifi da biste podesili profil.  Za više informacija pogledajte dokumentaciju za online administratora."
+msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Serijsko ažuriranje preko profila. Idite na Administracija > Sopstvena podešavanja podataka i ekrana > CiviCRM Profil da biste podesili profil.  Za više informacija pogledajte dokumentaciju za online administratora."
 
 #: CRM/Activity/Form/Task/PickProfile.php
 msgid "No Profile Configured"
